Implemented PR suggestion